--- a/authorization.html
+++ b/authorization.html
@@ -16,7 +16,7 @@
         <div class="logo param"><span> Блог Пользователя</span></div>
         <div class="nav param-left">
             <a href="index.html">Главная</a>
-            <a href="#">Статьи</a>
+            <a href="page1.html">Статьи</a>
             <a href="#">Новости</a>
             <a href="#">Обо мне</a>
         </div>
