error correction html,css

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             <a href="authorization.html">Регистрация</a>
         </div>
     </div>
-    <div class="wpap">
-        <div class="content-top param">
+    <div class="wrap ">
+        <div class="param  main">
+
             <div class="content-top-left">
                 <div class="head">
                     <h3>Статья 1</h3>
@@ -55,7 +56,36 @@
                 </div>
 
             </div>
-            <div class="content-top-right param-left">
+            <!-- content top -->
+            <div class="image"></div>
+            <div class="content-bottom">
+
+                <div class="head">
+                    <h3>Статья 1</h3>
+                    <span>1 февраля 2018</span>
+                </div>
+                <p>
+                    Не следует, однако забывать, что новая модель организационной деятельности влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же сложившаяся струкрура организации
+                    в значительной степени обуславливает создание соответствующих условий активации Товарищи! укрепление и развитие структуры играет важную роль в формировании форм развития.
+                </p>
+                <p>
+                    С другой стороны постоянный количественный рост и сфера нашей активности позволяе оценить значение направлений прогрессивного развития. Товарищи! консультация с широким активом способствует подготовки и реализации системы обучения кадров, соответвтвует
+                    насущным потребностям. Равным образом.
+                </p>
+                <div class="content-foot">
+                    <div class="content-foot-left">
+                        <span>Просмотры: 300</span>
+                        <span>Лайки: 100</span>
+                    </div>
+                    <button class="button">Читать</button>
+                </div>
+            </div>
+            <!--  -->
+        </div>
+        <!-- main end -->
+
+        <div class="site-bar param-left">
+            <div class="content-top-right">
                 <h3 class="content-top-right-alig">Разделы</h3>
                 <span class="content-top-right-alig">Статьи</span>
                 <ul>
@@ -75,32 +105,11 @@
 
                 </ul>
             </div>
+            <!-- content-top-right end... -->
         </div>
-        <div class="image param"></div>
-        <div class="content-bottom param">
-            <div class="content-top-left">
-                <div class="head">
-                    <h3>Статья 1</h3>
-                    <span>1 февраля 2018</span>
-                </div>
-                <p>
-                    Не следует, однако забывать, что новая модель организационной деятельности влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же сложившаяся струкрура организации
-                    в значительной степени обуславливает создание соответствующих условий активации Товарищи! укрепление и развитие структуры играет важную роль в формировании форм развития.
-                </p>
-                <p>
-                    С другой стороны постоянный количественный рост и сфера нашей активности позволяе оценить значение направлений прогрессивного развития. Товарищи! консультация с широким активом способствует подготовки и реализации системы обучения кадров, соответвтвует
-                    насущным потребностям. Равным образом.
-                </p>
-                <div class="content-foot">
-                    <div class="content-foot-left">
-                        <span>Просмотры: 300</span>
-                        <span>Лайки: 100</span>
-                    </div>
-                    <button class="button">Читать</button>
-                </div>
 
-            </div>
-        </div>
+
+
     </div>
     <footer class="footer">
         <span class="param">2019 Все права защищены</span>
