--- a/page1.html
+++ b/page1.html
@@ -31,8 +31,8 @@
             <a href="authorization.html">Регистрация</a>
         </div>
     </div>
-    <div class="wpap">
-        <div class="content-top param">
+    <div class="wrap">
+        <div class="main param">
             <div class="content-top-left">
                 <div class="head">
                     <h3>Статья 1</h3>
@@ -110,7 +110,11 @@
                 </div>
             </div>
             <!-- content-top end... -->
-            <div class="content-top-right page param-left">
+
+        </div>
+        <!-- main end... -->
+        <div class="site-bar param-left">
+            <div class="content-top-right page ">
                 <h3 class="content-top-right-alig">Разделы</h3>
                 <span class="content-top-right-alig">Статьи</span>
                 <ul>
@@ -131,6 +135,7 @@
                 </ul>
             </div>
         </div>
+
     </div>
     <footer class="footer">
         <span class="param">2019 Все права защищены</span>
