--- a/authorization.html
+++ b/authorization.html
@@ -17,7 +17,7 @@
         <div class="nav param-left">
             <a href="index.html">Главная</a>
             <a href="page1.html">Статьи</a>
-            <a href="#">Новости</a>
+            <a href="news.html">Новости</a>
             <a href="#">Обо мне</a>
         </div>
     </div>
