--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav param-left">
             <a href="#">Главная</a>
             <a href="page1.html">Статьи</a>
-            <a href="#">Новости</a>
+            <a href="news.html">Новости</a>
             <a href="#">Обо мне</a>
         </div>
     </div>
@@ -90,18 +90,18 @@
                 <span class="content-top-right-alig">Статьи</span>
                 <ul>
                     <li><a href="page1.html">Статья 1</a></li>
-                    <li><a href="#">Статья 2</a></li>
-                    <li><a href="#">Статья 3</a></li>
-                    <li><a href="#">Статья 4</a></li>
-                    <li><a href="#">Статья 5</a></li>
-                    <li><a href="#">Статья 5.1</a></li>
+                    <li><a href="page1.html">Статья 2</a></li>
+                    <li><a href="page1.html">Статья 3</a></li>
+                    <li><a href="page1.html">Статья 4</a></li>
+                    <li><a href="page1.html">Статья 5</a></li>
+                    <li><a href="page1.html">Статья 5.1</a></li>
                 </ul>
                 <span class="content-top-right-alig">Новости</span>
                 <ul>
-                    <li><a href="#">Новость 1</a></li>
-                    <li><a href="#">Новость 2</a></li>
-                    <li><a href="#">Новость 3</a></li>
-                    <li><a href="#">Новость 3.1</a></li>
+                    <li><a href="news.html">Новость 1</a></li>
+                    <li><a href="news.html">Новость 2</a></li>
+                    <li><a href="news.html">Новость 3</a></li>
+                    <li><a href="news.html">Новость 3.1</a></li>
 
                 </ul>
             </div>
