done! without media requests

--- a/new_user.html
+++ b/new_user.html
@@ -23,21 +23,22 @@
     </div>
 
     <div class="wrap-news">
-        <h3>Новая новость</h3>
-        <div class="input-news param-news">
-            <input type="text" placeholder="Название" class="input-news-all">
-            <input type="text" placeholder="Название на английском" class="input-news-all">
+
+        <h3>Новый пользователь</h3>
+        <div class="wrap-news-user">
+            <div class="input-news-user param-news">
+                <input type="text" placeholder="Имя" class="input-news-all">
+                <input type="text" placeholder="Отчество" class="input-news-all">
+                <input type="text" placeholder="Пароль" class="input-news-all">
+            </div>
+            <div class="input-news-user param-news">
+                <input type="text" placeholder="Фамилия" class="input-news-all">
+                <input type="text" placeholder="Почта" class="input-news-all">
+                <button type="submit" class="button">Добавить</button>
+            </div>
         </div>
-        <div class="textarea-news-little param-news">
-            <textarea name="textarea-news-little" id="" cols="30" rows="10" placeholder="Краткая новость" class=" input-news-all "></textarea>
-        </div>
-        <div class="textarea-news-big param-news">
-            <textarea name="textarea-news-big" id="" cols="30" rows="10" placeholder="Полная новость" class="input-news-all"></textarea>
-        </div>
-        <div class="input-news param-news input-news-bottom">
-            <input type="text" placeholder="Дата публикации" class="input-news-all">
-            <input type="text" placeholder="Автор" class="input-news-all">
-        </div>
+
+
     </div>
 
     <!-- wrap end... -->
