--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body>
     <div class="top ">
         <div class="logo param"><span> Блог Пользователя</span></div>
+        <div class="device-menu param-left"></div>
         <div class="nav param-left">
             <a href="#">Главная</a>
             <a href="page1.html">Статьи</a>
             <a href="news.html">Новости</a>
             <a href="#">Обо мне</a>
+
         </div>
     </div>
     <div class="search">
@@ -84,7 +86,7 @@
         </div>
         <!-- main end -->
 
-        <div class="site-bar param-left">
+        <div class="site-bar param param-left">
             <div class="content-top-right">
                 <h3 class="content-top-right-alig">Разделы</h3>
                 <span class="content-top-right-alig">Статьи</span>
