--- a/page1.html
+++ b/page1.html
@@ -14,6 +14,7 @@
 <body>
     <div class="top ">
         <div class="logo param"><span> Блог Пользователя</span></div>
+        <div class="device-menu param-left"></div>
         <div class="nav param-left">
             <a href="index.html">Главная</a>
             <a href="#">Статьи</a>
@@ -113,7 +114,7 @@
 
         </div>
         <!-- main end... -->
-        <div class="site-bar param-left">
+        <div class="site-bar param param-left">
             <div class="content-top-right page ">
                 <h3 class="content-top-right-alig">Разделы</h3>
                 <span class="content-top-right-alig">Статьи</span>
