--- a/authorization.html
+++ b/authorization.html
@@ -14,6 +14,7 @@
 <body>
     <div class="top ">
         <div class="logo param"><span> Блог Пользователя</span></div>
+        <div class="device-menu param-left"></div>
         <div class="nav param-left">
             <a href="index.html">Главная</a>
             <a href="page1.html">Статьи</a>
