--- a/news.html
+++ b/news.html
@@ -14,6 +14,7 @@
 <body>
     <div class="top ">
         <div class="logo param"><a href="index.html"> Блог Пользователя</a></div>
+        <div class="device-menu param-left"></div>
         <div class="nav param-left">
             <a href="new_user.html">Пользователи</a>
             <a href="news.html">Новости</a>
