--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -14,7 +14,21 @@
 <body>
     <div class="top ">
         <div class="logo param"><span> Блог Пользователя</span></div>
-        <div class="device-menu param-left"></div>
+        <div class="device-menu param-left">
+            <div class="hidden-menu-wrap">
+                <div class="hidden-menu">
+                    <ul>
+                        <li><a href="page1.html">Статьи</a></li>
+                        <li><a href="news.html">Новости</a></li>
+                        <li><a href="">Обо мне</a></li>
+                        <li><a href="authorization.html">Авторизация</a></li>
+                        <li><a href="authorization.html">Регистрация</a></li>
+                    </ul>
+                </div>
+
+
+            </div>
+        </div>
         <div class="nav param-left">
             <a href="index.html">Главная</a>
             <a href="#">Статьи</a>
