--- a/authorization.html
+++ b/authorization.html
@@ -14,7 +14,22 @@
 <body>
     <div class="top ">
         <div class="logo param"><span> Блог Пользователя</span></div>
-        <div class="device-menu param-left"></div>
+        <div class="device-menu param-left">
+            <div class="hidden-menu-wrap">
+                <div class="hidden-menu">
+                    <div class="close"><img src="image/close.png" alt="close">
+                    </div>
+                    <ul>
+                        <li><a href="page1.html">Статьи</a></li>
+                        <li><a href="news.html">Новости</a></li>
+                        <li><a href="">Обо мне</a></li>
+                        <li><a href="authorization.html">Авторизация</a></li>
+                        <li><a href="authorization.html">Регистрация</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- hidden-menu-wrap end... -->
+        </div>
         <div class="nav param-left">
             <a href="index.html">Главная</a>
             <a href="page1.html">Статьи</a>
@@ -75,7 +90,7 @@
             <span class="param-left"></span>
 
         </footer>
-
+        <script src="js/script.js"></script>
 </body>
 
 </html>
