--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="device-menu param-left">
             <div class="hidden-menu-wrap">
                 <div class="hidden-menu">
+                    <div class="close"><img src="image/close.png" alt="close">
+                    </div>
                     <ul>
                         <li><a href="page1.html">Статьи</a></li>
                         <li><a href="news.html">Новости</a></li>
@@ -25,9 +27,8 @@
                         <li><a href="authorization.html">Регистрация</a></li>
                     </ul>
                 </div>
-
-
             </div>
+            <!-- hidden-menu-wrap end... -->
         </div>
         <div class="nav param-left">
             <a href="#">Главная</a>
@@ -119,6 +120,7 @@
                     <li><a href="news.html">Новость 3</a></li>
                     <li><a href="news.html">Новость 3.1</a></li>
 
+
                 </ul>
             </div>
             <!-- content-top-right end... -->
@@ -132,7 +134,7 @@
         <span class="param-left">Разаработик</span>
 
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
