--- a/new_user.html
+++ b/new_user.html
@@ -14,7 +14,21 @@
 <body>
     <div class="top ">
         <div class="logo param"><a href="index.html"> Блог Пользователя</a></div>
-        <div class="device-menu param-left"></div>
+        <div class="device-menu param-left">
+            <div class="hidden-menu-wrap">
+                <div class="hidden-menu">
+                    <div class="close"><img src="image/close.png" alt="close">
+                    </div>
+                    <ul>
+                        <li><a href="new_user.html">Пользователи</a></li>
+                        <li><a href="news.html">Новости</a></li>
+                        <li><a href="#">Настройка сайта</a></li>
+                        <li><a href="index.html">Главная</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- hidden-menu-wrap end... -->
+        </div>
         <div class="nav param-left">
             <a href="new_user.html">Пользователи</a>
             <a href="news.html">Новости</a>
@@ -48,7 +62,7 @@
         <span class="param-left"></span>
 
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
