--- a/page1.html
+++ b/page1.html
@@ -17,6 +17,8 @@
         <div class="device-menu param-left">
             <div class="hidden-menu-wrap">
                 <div class="hidden-menu">
+                    <div class="close"><img src="image/close.png" alt="close">
+                    </div>
                     <ul>
                         <li><a href="page1.html">Статьи</a></li>
                         <li><a href="news.html">Новости</a></li>
@@ -25,9 +27,8 @@
                         <li><a href="authorization.html">Регистрация</a></li>
                     </ul>
                 </div>
-
-
             </div>
+            <!-- hidden-menu-wrap end... -->
         </div>
         <div class="nav param-left">
             <a href="index.html">Главная</a>
@@ -157,7 +158,7 @@
         <span class="param-left"></span>
 
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
