--- a/news.html
+++ b/news.html
@@ -17,17 +17,17 @@
         <div class="device-menu param-left">
             <div class="hidden-menu-wrap">
                 <div class="hidden-menu">
+                    <div class="close"><img src="image/close.png" alt="close">
+                    </div>
                     <ul>
-                        <li><a href="page1.html">Статьи</a></li>
+                        <li><a href="new_user.html">Пользователи</a></li>
                         <li><a href="news.html">Новости</a></li>
-                        <li><a href="">Обо мне</a></li>
-                        <li><a href="authorization.html">Авторизация</a></li>
-                        <li><a href="authorization.html">Регистрация</a></li>
+                        <li><a href="#">Настройка сайта</a></li>
+                        <li><a href="index.html">Главная</a></li>
                     </ul>
                 </div>
-
-
             </div>
+            <!-- hidden-menu-wrap end... -->
         </div>
         <div class="nav param-left">
             <a href="new_user.html">Пользователи</a>
@@ -61,7 +61,7 @@
         <span class="param-left"></span>
 
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
